--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Dept_Wise_Faculty_Info"
+            android:exported="false" />
+        <activity
             android:name=".About_ScrollingActivity"
             android:exported="false"
             android:label="@string/title_activity_about_scrolling"
