--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -47,7 +50,7 @@ dependencies {
 
 //    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'   //for pdf viewing
 
-    implementation 'com.github.afreakyelf:Pdf-Viewer:v1.0.7'
+    implementation 'com.github.afreakyelf:Pdf-Viewer:v1.0.7' //for pdf viewing
 
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics'
@@ -56,6 +59,11 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     //For resize view
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+
+
+
+    //other
 
 
 
