--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Departments"
+            android:exported="false" />
+        <activity
             android:name=".EbookNewActivity"
             android:exported="false" />
         <activity
