--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".HelpDesk"
+            android:exported="false" />
+        <activity
+            android:name=".PlacementCell"
+            android:exported="false" />
+        <activity
             android:name=".OnlineFeesPayment"
             android:exported="false" />
         <activity
